--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Meeting Minutes</title>
-    <meta charset="UTF-8">
-  </head>
-  <body>
-    <h1>110 Meeting Minutes</h1>
-    <h2>Brainstorming</h2>
+<style>
+  
+
+@keyframes test {
+  from {background-color: linen;}
+  to {background-color: black;}
+}
+  </style>
+<head>
+  <title text-align:center>Meeting Minutes</title>
+  <meta charset="UTF-8">
+</head>
+<body>
+  <h1 >110 Meeting Minutes</h1>
+  <h2>Brainstorming</h2>
   <p>04 October 2022</p>
   <h2>Attendance</h2>
   <p>-Karthik <br> -Karthik's mom <br> -Karthik's dad </p>
@@ -22,6 +30,7 @@
 
   <h2>Miscellaneous</h2>
   <p>- Why are all the topics about Karthik?</p>
+  <div></div>
   <img src= "Limnu_interface.png" alt="meeting minutes pictures" style="width:500px;height:600px;">
   <p><br></p>
   <audio controls>
