--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
+  body {
+    background-color: linen;
+  }
   
+  h1 {
+    text-align: center;
+    font-size:xx-large;
+  } 
 
 @keyframes test {
   from {background-color: linen;}
