--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-  
+body {
+  background-color: linen;
+}
+
+h1 {
+  text-align: center;
+  font-size:xx-large;
+} 
+
+h2{
+  color:gray;
+  font-size: x-large;
+}
+
+p{
+  color: black;
+  font-size: medium;
+}
 
 @keyframes test {
   from {background-color: linen;}
