--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@ p{
   font-size: medium;
 }
 
+div {
+  width: 100px;
+  height: 100px;
+  background-color: linen;
+  animation-name: test;
+  animation-duration: 20s;
+}
+
+
 
 @keyframes test {
   from {background-color: linen;}
